Fix paddings and margins to make it easier to view on mobile

--- a/style.css
+++ b/style.css
@@ -3,9 +3,10 @@
 body {
 background-color: #222;
 background-image: url('images/bg_pattern.png');
-padding: 8px;
+padding: 0px;
 margin: 0 auto;
-width: 90%;
+margin-top: 8px;
+width: 95%;
 max-width: 1000px;
 text-align: center;
 color: #c9f;
@@ -182,10 +183,10 @@ padding: 0px;
 .content {
 background: #3335;
 text-align: left;
-margin: 10px;
-padding: 30px;
-padding-top: 15px;
-padding-bottom: 15px;
+margin: 1.5%;
+padding: 3%;
+padding-top: 0px;
+padding-bottom: 0px;
 border: 1px solid #c9f;
 border-radius: 4px;
 }
